--- a/src/app/material-component/dialog/consultation/consultation.component.html
+++ b/src/app/material-component/dialog/consultation/consultation.component.html
@@ -17,4 +17,5 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-</div>
+    </div>
+    <button mat-stroked-button (click)="redirectDoctor()">Ajouter un docteur</button>
