--- a/src/app/material-component/dialog/file-upload/file-upload.component.html
+++ b/src/app/material-component/dialog/file-upload/file-upload.component.html
@@ -1,26 +1,42 @@
-<div class="container d-flex justify-content-center">
-    <div class="mt-5 row justify-content-center">
-
-        <div class="col-10 mb-3">
-            <label class="px-3">Select File: </label>
-            <input type="file" (change)="selectFile($event)" />
-        </div>
-
-        <div class="col-2">
-            <button class="btn btn-success btn-sm" (click)="uploadFile()">
-                Upload
-            </button>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="mt-5 row justify-content-center">
-        <div class="col-10 mb-3">
-            <ul>
-                <li *ngFor="let link of fileUris">
-                    <a href="{{ link }}" target="_blank">{{ link }}</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+<div >
+  
+    <mat-form-field class="uploadFile">
+      <div>
+        <mat-toolbar>
+          <input matInput [value]="fileName" />
+  
+          <button
+            mat-flat-button
+            color="primary"
+            [disabled]="!currentFile"
+            (click)="upload()"
+          >
+            Télécharger
+          </button>
+        </mat-toolbar>
+  
+        <input
+          type="file"
+          id="fileInput"
+          (change)="selectFile($event)"
+          name="fileInput"
+        />
+      </div>
+    </mat-form-field>
+  </div>
+  
+  <div *ngIf="message" class="message">
+    {{ message }}
+  </div>
+  <div class="card">
+    <div class="card-header" *ngIf="listFiles">Liste des fichiers</div>
+    
+   <ul
+      class="list-group list-group-flush"
+      *ngFor="let file of listFiles">
+      <li class="list-group-item">
+        <a (click)="downloadFile(file)" class="file-info">{{file.name }}<mat-icon matTooltip="Télécharger">save_alt</mat-icon></a>
+         <a (click)="handleDeleteFile(file.name)"><mat-icon matTooltip="Supprimer" class="icon-delete">delete</mat-icon></a> 
+      </li>
+    </ul>
+  </div>
