--- a/src/app/material-component/manager-doctor/manager-doctor.component.html
+++ b/src/app/material-component/manager-doctor/manager-doctor.component.html
@@ -26,7 +26,7 @@
         </ng-container>
 
         <ng-container matColumnDef="phone">
-            <th mat-header-cell *matHeaderCellDef>Description</th>
+            <th mat-header-cell *matHeaderCellDef>Téléphone</th>
             <td mat-cell *matCellDef="let element">{{element.phone}}</td>
         </ng-container>
 
@@ -47,10 +47,10 @@
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element" class="action-link">
-                <button mat-icon-button color="primary" matTooltip="Edit" (click)="handleEditAction(element)">
+                <button mat-icon-button color="primary" matTooltip="Modifier" (click)="handleEditAction(element)">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" matTooltip="Delete" >
+                <button mat-icon-button color="primary" matTooltip="Supprimer" >
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
