--- a/src/app/material-component/manager-event/manager-event.component.html
+++ b/src/app/material-component/manager-event/manager-event.component.html
@@ -1,7 +1,100 @@
 <mat-card>
-    <b><span>Gestion des Evénements</span></b>
+    <b><span>Gestion des évènements</span></b>
     <button mat-flat-button color="primary" class="float-right" (click)="handleAddEvent()">
-        <mat-icon>add_circle</mat-icon> Ajouter une événement
+        <mat-icon>add_circle</mat-icon> Ajouter un évènement
     </button>
 </mat-card>
 <hr>
+<div class="p-10">
+    <button mat-button color="white" (click)="previous()"><mat-icon>navigate_before</mat-icon>Retour</button>
+</div>
+<hr>
+<h2>Consultation</h2>
+<div *ngIf="dataSourceConsultation">
+    <div class="card-container">
+        <div class="card-warapper" *ngFor="let item of dataSourceConsultation">
+
+            <mat-card class="example-card">
+                <mat-card-header [ngClass]="{'class-consultation':item.event.natureAction.title==='Consultation',
+'class-analyse': item.event.natureAction.title==='Analyse',
+'class-traitement': item.event.natureAction.title==='Traitement'}">
+                    <mat-card-title>{{item.event.natureAction.title}}</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <br>
+                    <mat-card-subtitle><p>Classeur: {{item.nameSpace}}<br>
+                        Sujet: {{item.titleSubject}}<br>
+                        Spécialité du Sujet: {{item.titleSubSubject}}</p>
+                     </mat-card-subtitle>
+                    
+                    <p><b>Date : {{item.event.date|date:'short'}} </b></p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-button color="primary" matTooltip="Consulter" (click)='handleEdite(item.event.id)'>Consulter</button>
+                    <button mat-button class="green" matTooltip="Modifier" (click)='handleUpdateEvent(item.event)'><mat-icon>edit</mat-icon></button>
+                    <button mat-button color="warn" matTooltip="Supprimer" (click)='handleDeleteEvent(item.event.id)'><mat-icon>delete</mat-icon></button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+</div>
+<hr>
+<h2>Traitement</h2>
+<div *ngIf="dataSourceTraitement">
+    <div class="card-container">
+        <div class="card-warapper" *ngFor="let item of dataSourceTraitement">
+
+            <mat-card class="example-card">
+                <mat-card-header [ngClass]="{'class-consultation':item.event.natureAction.title==='Consultation',
+'class-analyse': item.event.natureAction.title==='Analyse',
+'class-traitement': item.event.natureAction.title==='Traitement'}">
+                    <mat-card-title>{{item.event.natureAction.title}}</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <br>
+                    <mat-card-subtitle><p>Classeur: {{item.nameSpace}}<br>
+                        Sujet: {{item.titleSubject}}<br>
+                        Spécialité du Sujet: {{item.titleSubSubject}}</p>
+                     </mat-card-subtitle>
+                    <p><b>Date : {{item.event.date|date:'short'}} </b></p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-button color="primary" matTooltip="Consulter" (click)='handleEdite(item.event.id)'>Consulter</button>
+                    <button mat-button class="green" matTooltip="Mofifier" (click)='handleUpdateEvent(item.event)'><mat-icon>edit</mat-icon></button>
+                    <button mat-button color="warn" matTooltip="Supprimer" (click)='handleDeleteEvent(item.event.id)'><mat-icon>delete</mat-icon></button>
+
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+</div>
+<hr>
+<h2>Analyse</h2>
+<div *ngIf="dataSourceAnalyse">
+    <div class="card-container">
+        <div class="card-warapper" *ngFor="let item of dataSourceAnalyse">
+
+            <mat-card class="example-card">
+                <mat-card-header [ngClass]="{'class-consultation':item.event.natureAction.title==='Consultation',
+'class-analyse': item.event.natureAction.title==='Analyse',
+'class-traitement': item.event.natureAction.title==='Traitement'}">
+                    <mat-card-title>{{item.event.natureAction.title}}</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <br>
+                    <mat-card-subtitle><p>Classeur: {{item.nameSpace}}<br>
+                        Sujet: {{item.titleSubject}}<br>
+                        Spécialité du Sujet: {{item.titleSubSubject}}</p>
+                     </mat-card-subtitle>
+
+                    <p><b>Date : {{item.event.date|date:'short'}}</b></p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-button color="primary" matTooltip="Consulter" (click)='handleEdite(item.event.id)'>Consulter</button>
+                    <button mat-button color="green" matTooltip="Modifier" (click)='handleUpdateEvent(item.event)'><mat-icon class="green">edit</mat-icon></button>
+                    <button mat-button color="warn" matTooltip="Supprimer" (click)='handleDeleteEvent(item.event.id)'><mat-icon>delete</mat-icon></button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+</div>
