--- a/src/app/material-component/manager-binder/manager-binder.component.html
+++ b/src/app/material-component/manager-binder/manager-binder.component.html
@@ -9,6 +9,91 @@
 <div class="contenairePage">
     <div class="first-div">
         <h3>Liste de vos événements</h3>
+        <hr>
+        <h2>Consultation</h2>
+        <div *ngIf="dataSourceConsultation">
+            <div class="card-container">
+                <div class="card-warapper" *ngFor="let item of dataSourceConsultation">
+        
+                    <mat-card class="example-card">
+                        <mat-card-header [ngClass]="{'class-consultation':item.event.natureAction.title==='Consultation',
+        'class-analyse': item.event.natureAction.title==='Analyse',
+        'class-traitement': item.event.natureAction.title==='Traitement'}">
+                            <mat-card-title>{{item.event.natureAction.title}}</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <br>
+                            <mat-card-subtitle><p>Classeur: {{item.nameSpace}}<br>
+                                Sujet: {{item.titleSubject}}<br>
+                                Spécialité du Sujet: {{item.titleSubSubject}}</p>
+                             </mat-card-subtitle>
+                            
+                            <p><b>Date : {{item.event.date|date:'short'}} </b></p>
+                        </mat-card-content>
+                        <mat-card-actions>
+                            <button mat-button color="primary" (click)='handleEditeEvent(item.event)'>Editer</button>
+                        </mat-card-actions>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <h2>Traitement</h2>
+        <div *ngIf="dataSourceTraitement">
+            <div class="card-container">
+                <div class="card-warapper" *ngFor="let item of dataSourceTraitement">
+        
+                    <mat-card class="example-card">
+                        <mat-card-header [ngClass]="{'class-consultation':item.event.natureAction.title==='Consultation',
+        'class-analyse': item.event.natureAction.title==='Analyse',
+        'class-traitement': item.event.natureAction.title==='Traitement'}">
+                            <mat-card-title>{{item.event.natureAction.title}}</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <br>
+                            <mat-card-subtitle><p>Classeur: {{item.nameSpace}}<br>
+                                Sujet: {{item.titleSubject}}<br>
+                                Spécialité du Sujet: {{item.titleSubSubject}}</p>
+                             </mat-card-subtitle>
+                            <p><b>Date : {{item.event.date|date:'short'}} </b></p>
+                        </mat-card-content>
+                        <mat-card-actions>
+                            <button mat-button color="primary" (click)='handleEditeEvent(item.event)'>Editer</button>
+        
+                        </mat-card-actions>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <h2>Analyse</h2>
+        <div *ngIf="dataSourceAnalyse">
+            <div class="card-container">
+                <div class="card-warapper" *ngFor="let item of dataSourceAnalyse">
+        
+                    <mat-card class="example-card">
+                        <mat-card-header [ngClass]="{'class-consultation':item.event.natureAction.title==='Consultation',
+        'class-analyse': item.event.natureAction.title==='Analyse',
+        'class-traitement': item.event.natureAction.title==='Traitement'}">
+                            <mat-card-title>{{item.event.natureAction.title}}</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <br>
+                            <mat-card-subtitle><p>Classeur: {{item.nameSpace}}<br>
+                                Sujet: {{item.titleSubject}}<br>
+                                Spécialité du Sujet: {{item.titleSubSubject}}</p>
+                             </mat-card-subtitle>
+        
+                            <p><b>Date : {{item.event.date|date:'short'}}</b></p>
+                        </mat-card-content>
+                        <mat-card-actions>
+                            <button mat-button color="primary" (click)='handleEditeEvent(item.event)'>Editer</button>
+                        </mat-card-actions>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
+
     </div>
     <div class="second-div">
         <h3 class="">Liste de vos classeurs</h3>
@@ -33,7 +118,7 @@
                             <mat-icon>update</mat-icon>
                             <span>Modifier</span>
                         </button>
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)="handleDeleteBinder(item)">
                             <mat-icon>delete</mat-icon>
                             <span>Supprimer</span>
                         </button>
