--- a/src/app/bas-menus-acceuil/bas-menus-acceuil.component.html
+++ b/src/app/bas-menus-acceuil/bas-menus-acceuil.component.html
@@ -1,1 +1,9 @@
-<p>bas-menus-acceuil works!</p>
+<div class="container">
+    <br>
+    <h1 class="title">Prenez le contrôle de votre suivie médicale dés aujourd'huis!</h1>
+    <div class="bg-image"></div>
+    <div class="text">
+        <h2>Organiser, gérez et centralisez vos suivie médicale en toute simplicité avec notre application Classeur médicale.</h2>
+    </div>
+
+</div>
