--- a/src/app/material-component/dialog/confirmation/confirmation.component.html
+++ b/src/app/material-component/dialog/confirmation/confirmation.component.html
@@ -14,9 +14,9 @@
     
     <mat-dialog-actions align="end">
     <button mat-raised-button color="primary" (click)="handleChangeAction()">
-        <mat-icon>check_circle</mat-icon> Yes
+        <mat-icon>check_circle</mat-icon> oui
     </button>
     <button mat-raised-button color="warn" mat-dialog-close>
-        <mat-icon>cancel</mat-icon> No
+        <mat-icon>cancel</mat-icon> non
     </button>
     </mat-dialog-actions>
