--- a/src/app/material-component/dialog/subject-compenent/subject-compenent.component.html
+++ b/src/app/material-component/dialog/subject-compenent/subject-compenent.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row fxLayout="row">
-        <span>{{dialogData.action}} un Sujet de suivie</span>
+        <span>{{action}} un Sujet de suivie</span>
         <span class="spacer"></span>
         <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
             <mat-icon>close</mat-icon>
@@ -31,6 +31,6 @@
         <mat-icon>save</mat-icon>{{action}}
     </button>
     <button mat-raised-button color="warn" mat-dialog-close>
-        <mat-icon>cancel</mat-icon>Close
+        <mat-icon>cancel</mat-icon>Fermer
     </button>
 </mat-dialog-actions>
