--- a/src/app/material-component/manager-doctor/manager-doctor.component.html
+++ b/src/app/material-component/manager-doctor/manager-doctor.component.html
@@ -5,6 +5,11 @@
     </button>
 </mat-card>
 <hr>
+<div class="p-10">
+    <button mat-button color="white" (click)="previous()"><mat-icon>navigate_before</mat-icon>Retour</button>
+</div>
+
+<hr>
 <mat-card>
     <mat-form-field>
         <mat-label>Filter</mat-label>
