--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
   <div class="sticky content-outer-container">
 
     <mat-toolbar>
+      
       <mat-nav-list class="list-horizontal">
         <mat-list-item>
           <a routerLink="/accueil"><i class="bi bi-house"></i> Accueil</a>
@@ -45,16 +46,16 @@
     </mat-toolbar>
     <mat-menu #profile="matMenu" class="mymegamenu">
       <button mat-menu-item (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon>Logout
+        <mat-icon>exit_to_app</mat-icon>Déconnecter
       </button>
     </mat-menu>
 
   </div>
 </div>
 
-<div class="main content-inner-container">
+<div class="content-inner-container">
   <router-outlet></router-outlet>
 </div>
-<div class="footer" id="signup">
+<div class="footer" >
   All right reserved Mechri maroua
 </div>
