--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cardConnexion">
-    <h3><span class="title">Login</span></h3>
+    <h3><span class="title">Connexion</span></h3>
 
     <form [formGroup]="loginForm" class="loginForm">
         <div fxFlex fxLayout="column" class="column">
@@ -7,13 +7,13 @@
                 <mat-label>Email</mat-label>
                 <input matInput formControlName="email" required>
                 <mat-error *ngIf="loginForm.controls.email.touched && loginForm.controls.email.invalid">
-                    <span *ngIf="loginForm.controls.email.errors.required">This field is mandatory</span>
-                    <span *ngIf="loginForm.controls.email.errors.pattern">This field is invlaid</span>
+                    <span *ngIf="loginForm.controls.email.errors.required">Ce champ est obligatoire</span>
+                    <span *ngIf="loginForm.controls.email.errors.pattern">Ce champ est invalid</span>
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field fxFlex>
-                <mat-label>Password</mat-label>
+                <mat-label>Mot de passe</mat-label>
                 <input matInput formControlName="password" type="password" required
                     [type]="hide ? 'password' : 'text' ">
                 <button type="button" mat-icon-button matSuffix (click)="hide = !hide"
@@ -21,7 +21,7 @@
                     <mat-icon>{{hide ? 'visibility_off':'visibility'}}</mat-icon>
                 </button>
                 <mat-error *ngIf="loginForm.controls.password.touched && loginForm.controls.password.invalid">
-                    <span *ngIf="loginForm.controls.password.errors.required">This field is mandatory.</span>
+                    <span *ngIf="loginForm.controls.password.errors.required">Ce champ est obligatoire.</span>
                 </mat-error>
             </mat-form-field>
 
