--- a/src/app/material-component/edit-event/edit-event.component.html
+++ b/src/app/material-component/edit-event/edit-event.component.html
@@ -115,12 +115,12 @@
                 <table mat-table [dataSource]="dataTaskAfter" class="mat-elevation-z8">
                     <ng-container matColumnDef="natureActionTab">
                         <th mat-header-cell *matHeaderCellDef>Nature action</th>
-                        <td mat-cell *matCellDef="let element">{{element.natureAction.title}}</td>
+                        <td mat-cell *matCellDef="let element" [ngClass]="getColorClass(element)">{{element.natureAction.title}}</td>
                     </ng-container>
             
                     <ng-container matColumnDef="descriptionTab">
                         <th mat-header-cell *matHeaderCellDef>Description</th>
-                        <td mat-cell *matCellDef="let element">{{element.description}}</td>
+                        <td mat-cell *matCellDef="let element" [ngClass]="getColorClass(element)">{{element.description}}</td>
                     </ng-container>
                         
                     <ng-container matColumnDef="actionTab">
